--- a/src/main/resources/templates/meeting/meeting.html
+++ b/src/main/resources/templates/meeting/meeting.html
@@ -18,7 +18,7 @@
         </div>
         <div class="flex flex-col items-center">
             <video id="remoteVideo" autoplay playsinline muted class="rounded-lg border border-gray-300 w-64 h-48 bg-black"></video>
-            <div class="mt-2 text-sm text-gray-500">You</div>
+            <div class="mt-2 text-sm text-gray-500">Remote</div>
         </div>
     </div>
     <div class="mt-6 flex gap-4">
