--- a/src/main/resources/templates/meeting/meeting.html
+++ b/src/main/resources/templates/meeting/meeting.html
@@ -30,10 +30,10 @@
 <script>
 // --- Firebase Setup ---
 const firebaseConfig = {
-  apiKey: "[[${fbapiKey}]]",
-  authDomain: "[[${fbauthDomain}]]",
-  databaseURL: "[[${fbdatabaseURL}]]",
-  projectId: "[[${fbprojectId}]]"
+  apiKey: "[[${fb_apiKey}]]",
+  authDomain: "[[${fb_authDomain}]]",
+  databaseURL: "[[${fb_databaseURL}]]",
+  projectId: "[[${fb_projectId}]]"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
